third_party/llvm-project/clang/test/CXX/dcl.dcl/basic.namespace/namespace.udecl/p6-cxx11.cpp
// RUN: %clang_cc1 -fsyntax-only -verify %s

namespace A {
  namespace B { }
}

using A::B; // expected-error{{using declaration cannot refer to a namespace}}
